--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,13 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+            <!-- Autres propriétés -->
+            <sonar.host.url>http://localhost:9000</sonar.host.url>
+            <sonar.login>admin</sonar.login>
+            <sonar.password>passer</sonar.password>
+
+
     </properties>
     <dependencies>
 
@@ -28,6 +35,8 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.28</version>
         </dependency>
+
+
 
     </dependencies>
 
